--- a/.github/workflows/tmate.yml
+++ b/.github/workflows/tmate.yml
@@ -52,6 +52,10 @@ jobs:
           echo "$SSH_CONNECTION"
           echo "-----------------------------------------"
 
+      - name: L A K
+        run: |
+          echo "L A K "
+
       - name: ⚙️ Install Python & Node.js Dependencies
         run: |
           sudo apt update -y
